# home

./: .gitignore  .gitmodules  BACKLOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  e2e.yaml  release.yaml
crates/hs/: Cargo.toml  README.md
crates/hs-distill/: Cargo.toml  README.md  build.rs
crates/hs-distill/src/: adaptive_batch.rs  chunker.rs  cli.rs  client.rs  config.rs  error.rs  event_watch.rs  lib.rs  metadata.rs  pipeline.rs  qdrant.rs  quality.rs  reconcile.rs  server.rs  server_main.rs  types.rs
crates/hs-distill/src/embed/: mod.rs  onnx.rs
crates/hs-gateway/: Cargo.toml  README.md
crates/hs-gateway/src/: config.rs  enrollment.rs  main.rs  oauth.rs  proxy.rs  registry.rs  state.rs
crates/hs-mcp/: Cargo.toml  README.md
crates/hs-mcp/src/: main.rs
crates/hs-scribe/: Cargo.toml  README.md  build.rs
crates/hs-scribe/docker/: Dockerfile  Dockerfile.prebuilt  docker-compose.e2e.yml  docker-compose.yml
crates/hs-scribe/python/: download_dictionaries.py  download_paddle_models.py  pyproject.toml
crates/hs-scribe/src/: client.rs  config.rs  diag.rs  epub.rs  event_watch.rs  gpu.rs  html.rs  lib.rs  ollama_tuner.rs  pdf_meta.rs  postprocess.rs  server.rs  server_main.rs  watch.rs
crates/hs-scribe/src/eval/: harness.rs  mod.rs  report.rs
crates/hs-scribe/src/eval/datasets/: fintabnet.rs  mod.rs  omnidocbench.rs  readoc.rs
crates/hs-scribe/src/eval/metrics/: bleu.rs  cdm.rs  composite.rs  edit_distance.rs  teds.rs
crates/hs-scribe/src/models/: layout.rs  mod.rs  table_structure.rs
crates/hs-scribe/src/ocr/: engine.rs  mod.rs  ollama.rs  openai_compatible.rs  region.rs
crates/hs-scribe/src/pipeline/: markdown_generator.rs  mod.rs  processor.rs
crates/hs-scribe/src/utils/: deduplication.rs  mod.rs
crates/hs-scribe/tests/: end_to_end_test.rs  repro_2col_test.rs
crates/hs-scribe/tests/repro/2col-academic/: README.md
crates/hs-scribe/tests/repro/2col-academic/golden/: .gitkeep
crates/hs/config/: default.yaml
crates/hs/src/: cli.rs  cloud_cmd.rs  daemon.rs  distill_cmd.rs  main.rs  mcp_client.rs  mcp_cmd.rs  migrate_cmd.rs  pipeline_cmd.rs  restart_cmd.rs  scribe_cmd.rs  scribe_inbox.rs  scribe_inbox_install.rs  scribe_pool.rs  serve_cmd.rs  server_cmd.rs  status_cmd.rs  upgrade_cmd.rs
docs/: deployment.md  guide.md  install.ps1  install.sh
docs/specs/: 2026-05-06-html-paywall-guard.md  2026-05-06-paper-not-found-distinguish.md
hs-common/: Cargo.toml  README.md
hs-common/src/: catalog.rs  compose.rs  gpu_priority.rs  hardware_profile.rs  html.rs  http.rs  inbox.rs  lib.rs  markdown.rs  pipe_reporter.rs  secrets.rs  status.rs  styles.rs  tty_reporter.rs
hs-common/src/auth/: client.rs  token.rs
hs-common/src/event_bus/: config.rs  mod.rs  nats.rs
hs-common/src/logging/: config.rs  mod.rs  shipper.rs  spool.rs
hs-common/src/service/: cuda_bootstrap.rs  inflight.rs  lib_bootstrap.rs  mod.rs  pool.rs  protocol.rs  registry.rs
hs-common/src/storage/: config.rs  mod.rs  s3.rs
hs-style/: Cargo.toml
hs-style/src/: exit_codes.rs  global_args.rs  lib.rs  mode.rs  reporter.rs  tty_reporter.rs
markdown/: .scribe-watch-status.json
paper/: Cargo.toml  README.md  TODO.md
paper/src/: cli.rs  config.rs  error.rs  exit_codes.rs  lib.rs  models.rs  output.rs
paper/src/aggregation/: dedup.rs  merge.rs  mod.rs  quality.rs  ranking.rs  relevance.rs  types.rs
paper/src/commands/: config.rs  mod.rs  paper.rs
paper/src/ports/: provider.rs
paper/src/providers/: arxiv.rs  core.rs  crossref.rs  downloader.rs  europe_pmc.rs  mod.rs  openalex.rs  query_utils.rs  resilient.rs  response.rs  semantic_scholar.rs
paper/src/services/: download.rs  search.rs
pdf_masher/pdf-mash/: Cargo.toml  README.md  test_cuda.rs
pdf_masher/pdf-mash/.cargo/: config.toml
pdf_masher/pdf-mash/examples/: test_cuda.rs  test_onnx_comparison.rs
pdf_masher/pdf-mash/python/: README.md  convert_to_onnx.py
pdf_masher/pdf-mash/src/: config.rs  lib.rs  main.rs
pdf_masher/pdf-mash/src/cli/: args.rs
pdf_masher/pdf-mash/src/eval/: harness.rs  report.rs
pdf_masher/pdf-mash/src/eval/datasets/: omnidocbench.rs
pdf_masher/pdf-mash/src/eval/metrics/: bleu.rs  cdm.rs  mod.rs
pdf_masher/pdf-mash/src/models/: layout.rs  table_structure.rs
pdf_masher/pdf-mash/src/ocr/: cloud.rs  region.rs
pdf_masher/pdf-mash/src/pipeline/: pdf_parser.rs  processor.rs
pdf_masher/pdf-mash/src/utils/: deduplication.rs
pdf_masher/pdf-mash/tests/: end_to_end_test.rs
slop/: 2026-03-17-init.md  2026-04-03-qdrant-embeddings.md  2026-05-02-distill-qdrant-recovery.md  2026-05-02-drift-cleanup.md  2026-05-02-self-test-fixes.md  claude-desktop-selftest-prompt.md  debugging.md  todo.md  walkthrough-multiline-ocr.md
slop/dev_journal/: 2026-03-16-full-page-vlm-all-text-only.md  2026-03-16-vlm-text-gap-diagnosis.md  2026-03-22-code-review-cleanup.md  2026-03-22-config-init-unpaywall-ux-polish.md  2026-03-22-core-ux-tilde-fix.md  2026-03-22-download-pipeline-overhaul.md  2026-03-22-four-search-providers.md  2026-03-23-cli-ux-audit.md  2026-03-23-provider-audit-fixes.md
slop/instructions/: cuda_setup.md  paddle_ocr.md
slop/journal/: 2025-10-21-ocr-coordinate-transformation-fix.md  2025-10-22-coordinate-clipping-fix.md  2025-10-22-doclayout-yolo-coordinate-fix.md  2025-10-23-reading-order-and-visualization.md  2025-11-16-xycut-insertion-position-bug.md  2025-11-29-ocr-pipeline-refactoring.md  session_001.md  session_002.md  session_003.md  session_004.md  session_005.md  session_006.md  session_007.md  session_008.md
slop/research/: 2026-03-22-other-academic-pdf-sources.md  2026-03-22-provider-and-download-source-survey.md  multiline-ocr-failure.md  second-pass-for-sota.md  segmentation-case-sensitivity.md
slop/walkthroughs/: 000.md  001.md  002.md  003.md  004.md  005.md  006.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  021.md  022.md  023.md  024.md  025.md  026.md  027.md  028.md  029.md  030.md  031.md  032.md  033.md  034.md  035.md  036.md  037.md  038.md  2026-03-18-chunker.md  (+17 more)
(+12 files in other folders)
