[package]
name = "hs-style"
version = "0.1.0"
edition = "2021"

[features]
default = []
cli = [
    "dep:indicatif",
    "dep:owo-colors",
    "dep:supports-color",
    "dep:clap",
    "dep:terminal_size",
    "dep:unicode-width",
]

[dependencies]
indicatif = { version = "0.18", optional = true }
owo-colors = { version = "4.3", optional = true }
supports-color = { version = "3", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
terminal_size = { version = "0.4", optional = true }
unicode-width = { version = "0.2", optional = true }
dirs = "6"
