[package]
name = "paper"
version = "0.1.0"
edition = "2021"

[lib]
name = "paper"


[dependencies]
# Workspace deps
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
hs-common = { workspace = true, features = ["cli", "storage-s3", "events-nats"] }
owo-colors = { workspace = true }
serde_yaml_ng = { workspace = true }
figment = { workspace = true }

# Local deps (paper-specific)
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
governor = "0.10"
failsafe = "1.3"
backon = "1.3"
roxmltree = "0.20"
url = "2"
dirs = "6"
sha2 = "0.10"
futures = "0.3"
strsim = "0.11"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
