[package]
name = "hs-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hs-gateway"
path = "src/main.rs"

[dependencies]
hs-common = { workspace = true, features = ["auth", "service", "storage-s3", "logging"] }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
figment = { workspace = true }
serde_yaml_ng = { workspace = true }
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
