[package]
name = "hs"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "hs"
path = "src/main.rs"

[dependencies]
hs-scribe = { path = "../hs-scribe", features = ["client"] }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
hs-style = { workspace = true, features = ["cli"] }
owo-colors = { workspace = true }
paper = { path = "../../paper" }
dirs = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
dialoguer = { workspace = true }
reqwest = { workspace = true }
notify = "8"
notify-debouncer-full = "0.4"
