[package]
name = "hs"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "hs"
path = "src/main.rs"

[dependencies]
hs-scribe = { path = "../hs-scribe", features = ["client"] }
hs-distill = { path = "../hs-distill", features = ["client"] }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
hs-common = { workspace = true, features = ["cli", "service", "catalog"] }
owo-colors = { workspace = true }
paper = { path = "../../paper" }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
dialoguer = { workspace = true }
reqwest = { workspace = true }
notify = "8"
futures = "0.3"
tempfile = "3"
ctrlc = "3"
libc = "0.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
chrono = "0.4"
crossterm = "0.28"
